--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     炫酷
                 </div>
                 <div class="left-tag-item">
-                    球类游戏
+                    球类运动
                 </div>
             </div>
 
