--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div onclick="left()" class="left">
         <div class="left-main">
             
-            <div  class="logo" style="background-image: url(https://bu.dusays.com/2023/07/02/64a0e08c82711.jpg);"><img style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;" src="/static/img/logo4.png" alt="头像框" title="博主 1月17日 在线"></div>
+            <div  class="logo" style="background-image: url(https://bu.dusays.com/2024/03/13/65f1bb5323ce4.webp);"><img style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;" src="/static/img/logo4.png" alt="头像框" title="博主 1月17日 在线"></div>
             
             <div class="left-div left-des">
                 <div class="left-div-item">
