--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@
                     <!-- 项目项结束 -->
                 </a>
                 <!---->
-                <a class="projectItem" target="_blank" href="https://imgbed.zifyu.top/">
+                <a class="projectItem" target="_blank" href="https://chatglm.cn/main/detail">
                     <!-- 项目项开始 -->
                     <div class="projectItemLeft">
-                        <h1>自建图床</h1>
-                        <p>图片的垃圾场</p>
+                        <h1>chatGLM</h1>
+                        <p>中国版对话语言模型，与GLM大模型进行对话。</p>
                     </div>
                     <div class="projectItemRight">
                         <img src="/static/img/i3.png" alt="">
